--- a/API/package.json
+++ b/API/package.json
@@ -13,6 +13,8 @@
     "-": "^0.0.1",
     "D": "^1.0.0",
     "express": "^4.17.1",
+    "handlebars": "^4.7.7",
+    "nodemailer": "^6.5.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "ts-node-dev": "^1.1.1",
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
+    "@types/nodemailer": "^6.4.0",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "cross-env": "^7.0.3",
